<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_bg_layer"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="40dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="300dp"
                android:src="@drawable/logo"
                android:scaleType="fitXY"
                android:layout_marginBottom="10dp"/>


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height=".3dp"
                android:background="#e8eaf6"/>

            <TextView
                android:id="@+id/tagLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/tagline"
                android:textAllCaps="true"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                android:textColor="#e8eaf6"
                />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                app:elevation="10dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_google"
                    android:tag="google"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:background="@color/google_plus"
                    android:drawableLeft="@drawable/google"
                    android:elevation="10dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:maxWidth="300dp"
                    android:paddingLeft="10dp"
                    android:text="@string/login_with_google"
                    android:textColor="@android:color/white"
                    android:onClick="processLogin" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                app:elevation="10dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_facebook"
                    android:tag="facebook"
                    android:layout_width="301dp"
                    android:layout_height="60dp"
                    android:background="@color/colorPrimary"
                    android:drawableLeft="@drawable/facebook"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:paddingLeft="10dp"
                    android:text="@string/login_with_facebook"
                    android:textColor="@color/blue_grey_ligthen_5"
                    android:onClick="processLogin"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="40dp"
                app:elevation="10dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_twitter"
                    android:tag="twitter"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:paddingLeft="10dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:textColor="@color/blue_grey_ligthen_5"
                    android:drawableLeft="@drawable/twitter"
                    android:background="@color/twitter"
                    android:text="@string/login_with_twitter"
                    android:onClick="processLogin"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>